welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:6: error: not found: value t
	for(i<-0 to y ) { t(i)="x" }
                          ^Array1:12: error: not found: value t
		t(i)=t(i+1) 
                ^