welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
	var y:Int=getMondeHauteur()
	var x:Color=getCouleurSol() 
	var T = new Array[Int](10);
	for(i<-0 to y ) { t(i)="x" }
	for(i<-0 to y) { 
		avance();
		gauche();
		avance();
		droite();
		t(i)=t(i+1) 
	}
	
	
}
